Add higher-level information to the serial log via BattOrAgent

Bug: 735434, 775520
Change-Id: Ibab9cd698d0ad74593c008956d0a90fab08fe596
Reviewed-on: https://chromium-review.googlesource.com/723595
Commit-Queue: Charlie Andrews <charliea@chromium.org>
Reviewed-by: rnephew <rnephew@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509791}
Former-commit-id: da3f2b24e62846c25c5c68883e288b014bff1085